--- a/approach.tex
+++ b/approach.tex
@@ -1,37 +1,37 @@
 In this section, we describe our approach to generating 3D
 exemplar-based templates on-the-fly. It is based on 3D CAD model
 rendering (Sect.~\ref{sec:rendering}) followed by feature extraction
-and applying a whitening procedure. Based on the original whitening
+and whitening. Based on the original whitening
 formulation (Sect.~\ref{sec:who}), we propose three novel extensions that
 enable the application of whitening to the on-the-fly setting.
 %
 First, we adapt the whitening to the specific case of rendered
 images (Sect.~\ref{sec:nzwho}). Second, we show how to speed up the
-whitening by two orders of magnitudes for high-resolution templates
-(Sect.~\ref{sec:fastwhiten}). And third, we improve the runtime of our
-3D exemplar template detectors also at test time, by performing
+whitening by two orders of magnitude for high-resolution templates
+(Sect.~\ref{sec:fastwhiten}). Third, we improve the evaluation of our
+3D exemplar template detectors at test time by performing
 convolutions in the frequency domain (Sect.~\ref{sec:fft}).
 
 
 \subsection{Rendering}
 \label{sec:rendering}
 
-We used a public rendering engine to create realistic rendering and
-depth. We used CAD models that contain color, texture and material information such as
-transparency and reflectance to make the rendering as much realistic
-as possible to simulate the natural image statistics. The example rendering is
-in Fig. \ref{fig:rendering}. We also extracted depth information as well while
-rendering to use in the reconstruction.
+We used an off-the-shelf rendering engine to generate a realistic rendering
+and a depth map. The CAD models we used contain texture and material
+information. These make the rendering more realistic and allow us to transfer
+natural image statistics to rendered images. During rendering we extract a depth map which can be used for
+reconstruction\ref{fig:rendering}.
 
-We used a collection of CAD models to make exemplar renderings of CAD models and for viewpoints. The
-CAD models are cached so that when we fine-tune 2D-3D matching, so it can be rendered instantaneously.
-We made the renderings to change focal length and yaw, pitch, roll so that we can fine tune the matching
-continuously.
+To handle intraclass and viewpoint variability, we used various CAD models and
+made renderings of these CAD models from different viewpoints. Note that we
+continuously vary yaw, pitch, roll and the focal length as well so that the
+final fine tuning stage can produce accurate viewpoint estimations
+(Sect.~\ref{sec:fine}).
 
 \begin{figure}[t]
   \begin{center}
-     \includegraphics[width=0.4\linewidth]{rendering}
-     \includegraphics[width=0.4\linewidth]{depth}
+    \includegraphics[width=0.4\linewidth]{rendering}
+    \includegraphics[width=0.4\linewidth]{depth}
   \end{center}
   \caption{An example rendering and depth image from renderer.}
   \label{fig:rendering}
@@ -40,22 +40,51 @@ continuously.
 
 \subsection{Whitened Histograms of Orientations (WHO)}
 \label{sec:who}
-Our technique for rendering and training template detectors on-the-fly
-is drawing from recent work. Hariharan \etal. introduced Whitened Histograms of Orientations (WHO)
-\cite{Hariharan12}, which uses feature statistics from natural images to whiten HOG
-templates, making them more discriminative. Whitening is a common signal
-processing operation for decorrelating a set of random variables
+Our technique for rendering and generating exemplar template detectors
+on-the-fly draws from recent work by Hariharan \etal~\cite{Hariharan12}. They introduced Whitened
+Histograms of Orientations (WHO), which uses feature statistics from natural
+images to create a large number of classifiers analytically using Linear
+Discriminant Analysis (LDA) rather than training SVM
+classifiers. The confidence score for data $x_i$ can be
+defined as $ S(x_i) = w_{x_t}^T x_i$ where $w_{x_t} = \Sigma^{-1} (x_t - \mu)$
+is an LDA classifier for a template $x_t$. Since collecting covariance matrices
+for all possible template shape is intractable, \cite{Hariharan12} assumed
+Wide-Sense Stationarity(WSS) of HOG features and generated a covariance
+$\Sigma$ from autocovariance $\Gamma$ collected on a large collection of
+natural images. For a 31 dim HOG feature $x_t$ at location $t$
 
-\cite{Martinsson05, Belouchrani00}. More formally, suppose that we have a
-$k$-dimensional random variable $X \in \mathcal{R}^k$ with $Cov(X)=\Sigma$. By
-whitening the signal,
-\begin{equation}
-\tilde{X}=\Sigma^{-\frac{1}{2}}(X - E[X]) \label{eq:whitening},
-\end{equation}
-we remove 2nd order correlation between all features. Since collecting covariance matrix for every template shape
- is expensive, \cite{Hariharan12} proposed easy way to synthesize
-covariance $\Sigma$ from autocovariance $\Gamma$ and we followed their
-method to generate $\Sigma$.
+\begin{align}
+    E[x_t] & = \mu\\
+    E[(x_{t} - \mu ) (x_{\tau} - \mu)] & = E[(x_0 - \mu)(x_{\tau - t} - \mu)].
+\end{align}
+
+In this paper, we followed their method to generate $\Sigma$.
+
+
+% \begin{align}
+%     S(x_i) = w_{x_t}^T x_i\\
+%     w_{x_t} = \Sigma^{-1} (x_t - \mu)
+% \end{align}
+
+% The advantage of the approach is twofold: (a) you do not need a large number of
+% training and hard negative mining \cite{Felzenszwalb10} (b) it takes a fraction
+% of time generate (train) a discriminative template.
+
+% templates, making them more discriminative. Whitening is a common signal
+% processing operation for decorrelating a set of random variables
+% \cite{Martinsson05, Belouchrani00}. More formally, suppose that we have a
+% $k$-dimensional random variable $X \in \mathcal{R}^k$ with $Cov(X)=\Sigma$. By
+% whitening the signal,
+% 
+% \begin{equation}
+% \Phi(X)=\Sigma^{-\frac{1}{2}}(X - E[X]) \label{eq:whitening}
+% \end{equation}
+% 
+% we remove 2nd order correlation between all features. Since collecting covariance
+% matrix for every template shape is expensive, \cite{Hariharan12} proposed an easy
+% way to synthesize
+% covariance $\Sigma$ from autocovariance $\Gamma$ and we followed their
+% method to generate $\Sigma$.
 
 
 % More formally, suppose that we have a
@@ -65,10 +94,8 @@ method to generate $\Sigma$.
 % \tilde{X}=\Sigma^{-\frac{1}{2}}(X - E[X]) \label{eq:whitening},
 % \end{equation}
 
-% Since collecting covariance matrix for every template shape
-%  is expensive, \cite{Hariharan12} proposed easy way to synthesize
-% covariance $\Sigma$ from autocovariance $\Gamma$ and we followed their
-% method to generate $\Sigma$.
+% is independent of its place in the image, and the autocovariance of cells
+% depends only on their relative location.
 
 % The whitening and LDA have the same
 % formulation when we make a decision boundary $w = \Sigma^{-1}(\mu_+ - \mu_0)$
@@ -76,11 +103,6 @@ method to generate $\Sigma$.
 % (whitening), $\mu_0$ is the negative class center (LDA) or the signal mean
 % (whitening) and $\Sigma$ is the covariance matrix of classes (LDA) or
 % the correlation within signal (whitening).
-
-% In \cite{Hariharan12}, the authors compute the mean and covariance matrix by assuming Wide-Sense Stationarity (WSS) of HOG features
-% generated from natural images. That is, they assume the mean of a HOG cell is
-% independent of its place in the image, and the autocovariance of cells depends
-% only on their relative location.
 
 % In one dimension, let $x(u)$ be the feature at location $u$. Then WSS states
 % that $\mathbb{E}\left[x(u)\right] = \mu$ for all $u$, and
@@ -102,35 +124,47 @@ method to generate $\Sigma$.
 
 \subsection{Whitening Synthesized Templates and Non-Zero WHO}
 \label{sec:nzwho}
-Our first innovation is `Non-Zero' whitening. When synthesizing detection
+Our first improvement is `Non-Zero' whitening. When synthesizing detection
 templates from rendered images, a common problem is how to handle the
 background. If the model is rendered over a natural image background, gradients
-in the background will be incorporated into the discriminative template,
-potentially causing false-positives if background elements exist in the query
-image.
+in the background will be incorporated into the discriminative template.
 
 Alternatively, if the background is left textureless (see
-Fig.~\ref{fig:rendering}), whitening the resulting HOG template
-will produce undesirable background artifacts. These are created when centering
-the template (by subtracting the mean $\mu$), where strong negative weights are
-introduced in the textureless region (as seen in Fig.~\ref{fig:whocomparison}).
+Fig.~\ref{fig:rendering}), whitening the resulting HOG template introduces strong negative weights in the textureless region (by
+subtracting the mean $\mu$), as seen in Fig.~\ref{fig:whocomparison}.
 This could result in positive matches being suppressed due to spurious
 background gradients.
 
 NZ-WHO removes these artifacts so that the background has no effect on the
-template response. Let $T$ be the feature extraction transformation and $p$ be
-the rendering setting (see Sect.~\ref{sec:fine}). Given HOG features $x=T(I_r)$
-from rendering image $I_r$, we create a new vector $x'$ which
-contains only the non-zero elements of $x$. We select the corresponding elements of
-$\mu$ to produce $\mu'$, while the autocovariance lookup is only performed for
-the cells with non-zero gradient, producing $\Sigma'$ corresponding to the
-features in $x'$. After solving the resulting system (which is now smaller than
-in the WHO approach) we find
+template response. Let a vectorized HOG features of a rendering image $x = [
+\begin{array}{ccccc}x_1^T & x_2^T & \cdots & x_n^T\end{array} ]^T \in
+\mathcal{R}^{nd}$ where $x_i$ is the $i$th HOG cell feature, $n$ is the
+number of HOG cells and $d$ is the dimension of the HOG feature. We create a new
+vector $\bar{x}$ which contains only the non-zero HOG cell features of $x$. To be
+specific, let $I_d\in \mathcal{R}^{d\times d}$ be the identity matrix, $\bar{n}$ be
+the number of non-zero HOG cells, and a matrix $S\in \mathcal{R}^{\bar{n}d \times
+    nd}$ be the masking matrix that selects non-zero HOG cells. For instance, a
+template has  $n=3, \bar{n}=2$, and only the second HOG cell has $0$ norm, then
+
+\begin{align}
+    S = \left[ \begin{array}{ccc}
+        I_d & \mathbf{0} & \mathbf{0}\\
+        \mathbf{0} & \mathbf{0} & I_d
+        \end{array} \right]
+\end{align}
+
+The matrix selects HOG features that correspond to the first and third cells. 
+
+Using the selector $S$, we can define new vectorized HOG features $\bar{x} = S x,
+\bar{\mu} = S\mu, \bar{\Sigma} = S \Sigma S^T$. After solving the resulting system (which
+is now smaller than in the WHO approach) we find
 
 \begin{equation}
-w'=\Sigma'^{-1}(x' - \mu') \label{eq:nz-who},
-\end{equation}which we reassemble into the final NZ-WHO template $w$ by
-replacing the non-zero elements of $x$ with the corresponding $w'$ element.
+    \bar{w}=\bar{\Sigma}^{-1}(\bar{x} - \bar{\mu}) \label{eq:nz-who},
+\end{equation}
+
+To speed up the convolution, we restore zero cells and reshape the vector $\bar{w}$
+and compute convolution.
 
 % Notice that $\Sigma$ is not square-rooted in Eq.~\ref{eq:nz-who}, whereas it is
 % in the definition of whitening (Eq.~\ref{eq:whitening}). This is because the
@@ -173,63 +207,56 @@ replacing the non-zero elements of $x$ with the corresponding $w'$ element.
      \includegraphics[width=0.28\linewidth]{ihog_whiten_non_zero200_crop.png} \\
  \end{tabular}
   \end{center}
-  \caption{Comparison of HOG, WHO and NZ-WHO. Visualization of positive weights (first row),  visualization of negative weights (second row), HOGgles \cite{vondrick2013} (third row). Note that for WHO, whitening all cell result in strong negative edges on the empty region}
+  \caption{Comparison of HOG, WHO and NZ-WHO. Visualization of positive weights (first row),  visualization of negative weights (second row), HOGgles \cite{vondrick2013} (third row). Note that for WHO, whitening all cells results in strong negative edges on the empty region}
   \label{fig:whocomparison}
 \end{figure}
 
 
 \subsection{Fast Whitening using Conjugate Gradient}
 \label{sec:fastwhiten}
-Our second innovation lies in enhancing the computational efficiency
-of the whitening procedure, making it applicable to an on-the-fly
-rendering setting.
+% To speed up LDA synthesize, we introduced Conjugate Gradient method.
+% for solving the matrix inversion Eq.~\ref{eq:nz-who}.
+% This process speeds up , making it applicable to an on-the-fly rendering setting.
+% It originates from the insight that an iterative Conjugate Gradient method can be used to whiten a HOG template, which is much faster than the original procedure proposed in~\cite{Hariharan12} based on decomposition.
 
-It originates from the insight that an iterative
-Conjugate Gradient method can be used to whiten a HOG template, which
-is much faster than the original procedure proposed
-in~\cite{Hariharan12} based on decomposition.
-
-Whitening the non-zero
-feature vector $x'$ means a solving the system of linear equations, $\Sigma' w' = (x' -
-\mu')$. In
+Synthesizing the LDA template in Eq.~\ref{eq:nz-who} requires solving the system of
+linear equations, $\bar{\Sigma} \bar{w} = (\bar{x} - \bar{\mu})$. In
 \cite{Hariharan12}, the authors make use of the fact that covariance matrices
 are symmetric and positive semidefinite to solve the system via the Cholesky
 decomposition with Gaussian Elimination, which requires $O(n^3)$ time.
 
 The Conjugate Gradient method is an iterative algorithm for solving symmetric
 positive definite systems which runs in $O(n^2\kappa)$ time, where $\kappa$ is
-the condition number of the matrix. \cite{Shewchuk94}.
+the condition number of the matrix~\cite{Shewchuk94}.
 %
-This makes Conjugate Gradient faster than decomposition for matrices with small condition
-numbers relative to their size.
+This makes Conjugate Gradient faster than decomposition for matrices with small
+condition numbers relative to their size.
 
 The covariance matrix for HOG templates is typically
-ill-conditioned\cite{Hariharan12}, but we
-can add a regularization constant to the diagonal to reduce its condition
-number to the point where the conjugate gradient method will converge quickly.
+ill-conditioned~\cite{Hariharan12}, but adding a small regularization constant to
+the diagonal reduces its condition number.
 We use a constant of $0.15$, which reduces the condition number from $10^{20}$
 to $50$, much smaller than the dimension of the matrix (7000).
 
-As a result, a GPU implementation of conjugate gradient converges in 50
-ms when using 250 HOG cells, two orders of magnitude faster than the using
-Cholesky factorization with Gaussian Elimination.
-
+As a result, a GPU implementation of conjugate gradient converges in 60
+ms when using 250 HOG cells on Nvidia GTX660, two orders of magnitude faster
+than the using Cholesky factorization with Gaussian Elimination.
 
 We report the real time analysis of whitening using decomposition and
-conjugate gradient methods in Fig.~\ref{fig:whotime}. (a) compares the
+Conjugate Gradient methods in Fig.~\ref{fig:whotime}. (a) compares the
 absolute runtime of the different methods while (b) gives the obtained
 speedup. We see that % We compare the speed of each of template generation methods in
 % Fig.~\cite{fig:covariancetime_crop} Using naive Cholesky decomposition,
-WHO template takes several seconds for realistic template sizes of
-several hundred cells, while using the iterative Conjugate Gradient
-method, it only takes 100ms. If we use NZ-WHO, we can gain extra speed
-up since we only whitens non-zero cells.
+whitening the WHO template takes several seconds for realistic template sizes of
+several hundred cells, but only 60ms using the Conjugate Gradient
+method. If we use NZ-WHO, we can gain extra speed
+up since we only whiten non-zero cells.
 
 In addition, since the iterative Conjugate Gradient method directly
 tries to reduce the residual (the norm of $y-Ax$ for $Ax = y$), it is
 more numerically stable than Cholesky decomposition with Gaussian
-Elimination. We vary the number of cells in a template and show that
-the residual of NZ-WHO is smaller than WHO Fig.~\ref{fig:whoresidual}.
+Elimination. In Fig.~\ref{fig:whoresidual} we vary the number of cells in a template and show that
+the residual of NZ-WHO is smaller than that of WHO.
 % Also, the residual from the Conjugate Gradient method (the norm of $y-Ax$ for $Ax = y$) is smaller than 
 % that of Cholesky decomposition. 
 
@@ -259,13 +286,12 @@ the residual of NZ-WHO is smaller than WHO Fig.~\ref{fig:whoresidual}.
 
 \subsection{High Resolution Templates and FFT based Convolution}
 \label{sec:fft} 
+
 We generate high resolution templates with more than 250 HOG cells to capture
 details of an object to give accurate 2D-3D matching. These large templates
 cause computational burden when computing convolution. Though good for
-detecting accurate model and pose, convolution of high-resolution templates are
-much slower since computation time scales linearly with the number of HOG
-cells in the template. To overcome and speed up the convolution, we used FFT
-based GPU convolution \cite{Podlozhnyuk} which scales. Briefly, for length $n$ signal and
-length $m$ filter, naive convolution takes $O(nm)$ time whereas FFT-based
-convolution takes $O\left( (n + m)\log (n+m) \right)$ time. For large
+accurately determining model and pose, these large templates slow down the convolution since computation time scales linearly with the number of HOG
+cells in the template. To overcome this, we used FFT-based GPU convolution \cite{Podlozhnyuk}. Briefly, for length $n$
+signal and length $m$ filter, naive convolution takes $O(nm)$ time whereas
+FFT-based convolution takes $O\left( (n + m)\log (n+m) \right)$ time. For large
 $m$ (high resolution templates), we can gain computational advantage.
