--- a/experiments.tex
+++ b/experiments.tex
@@ -10,10 +10,10 @@ savings (Sect.~\ref{sec:variations}).
 Second, we demonstrate that our method can be used for multi-view
 object class detection in isolation. It can be applied in a sliding
 window fashion and deliver 2D bounding box as well as viewpoint
-information. Our method compares on par to state-of-the-art in this
+information. Our method is competitive with the state-of-the-art in this
 case (Sect.~\ref{sec:exp_iso}).
 %
-And third, we show that our method can be used to complement the
+Finally, we show that our method can be used to complement the
 detections provided by an existing object class detector, such
 as DPM~\cite{Felzenszwalb10} or RCNN~\cite{Girshick14}. In this case,
 we show a considerable performance improvement compared to previous
@@ -44,7 +44,7 @@ from rendered 3D CAD model images.
 \subsection{WHO Variants}
 \label{sec:variations}
 To validate our approach, we run an ensemble of NZ-WHO templates as a
-bank of exemplar detectors and compare its performance with other WHO
+bank of detectors and compare its performance with other WHO
 variants, notable WHO~\cite{Hariharan12} and the original non-whitened
 HOG~\cite{Dalal05}. In addition, we evaluate WHO-CG and WHO-CG-Z:
 WHO-CG uses iterative Conjugate Gradient method to generate
@@ -129,9 +129,9 @@ categories {\em car} and {\em bicycle}.
 
 To that end, we create an ensemble of NZ-WHO templates (Sect.~\ref{sec:approach})
 using $9$ different CAD models and a total of 192 different
-viewpoints, using 4 different elevation angles, 24 azimuth angles,
+viewpoints: 4 elevation angles, 24 azimuth angles,
 and 2 focal lengths. We run the entire ensemble exhaustively over
-each test image, in a sliding window fashion.
+each test image in a sliding window fashion.
 
  Performance is measured in Average Precision
 (AP) for object detection and Mean Precision in Pose Estimation
@@ -148,7 +148,7 @@ set of $8$ discrete viewpoint classes.
 Tab.~\ref{tab:3dobject} gives the corresponding results, comparing our
 method to two recent state-of-the-art baselines, the aspect layout
 model (ALM~\cite{Xiang12}), and the
-DPM-VOC+VP~\cite{Pepik12}. Fig.~\ref{fig:3dobject} gives
+DPM-VOC+VP~\cite{Pepik12}. Fig.~\ref{fig:3dobject_vis} gives
 qualitative results.
 
 We observe that our model performs on par with the state-of-the-art
@@ -247,7 +247,7 @@ The baseline methods V-DPM~\cite{Xiang14} and
 DPM-VOC+VP~\cite{Pepik12}) reported on the PASCAL3D+ dataset are
 variants of DPM~\cite{Felzenszwalb10} where each component of DPM
 account for various azimuths. Thus V-DPM and VOC-DPM provide discrete
-azimuth only whereas our method provides 3D viewpoint (yaw, pitch,
+azimuths only whereas our method provides 3D viewpoint (yaw, pitch,
 roll), CAD instance (model index, rendering, depth) and focal length.
 %
 \begin{figure}[t]
@@ -271,15 +271,13 @@ roll), CAD instance (model index, rendering, depth) and focal length.
 
 \paragraph{Setup.}
 We use detection bounding boxes provided by both object detectors and
-augment it using our method to give viewpoint estimation. We use
+augment use our method to perform fine-grained viewpoint estimation. We use
 detection bounding boxes from two different methods:
 DPM-VOC+VP\cite{Pepik12} and R-CNN~\cite{Girshick14}, both in their
 variants trained on 8 viewpoint categories, since these perform best
 in terms of AP. For both cases,
 we use the original score for plotting precision-recall curves
-(meaning that we can not improve over their AP), but
-enrich the detections with additional viewpoint information provided
-by our method. We fall back to a default
+(meaning that we can not improve over their AP). We revert back to a default
 viewpoint prediction ($0$ angles) in case the confidence of our
 method falls below a threshold.
 
@@ -292,11 +290,11 @@ AP and AVP and in Fig.~\ref{fig:car_cnn_ap} in terms of
 precision-recall plots and viewpoint confusion matrices. Example
 outputs of our method applied to candidate object detections are given
 in Fig.~\ref{fig:pascal12cnn}, and the effect of fine-tuning is
-visualized in Fig.~\ref{fig:tuning}. More qualitative results are part of
-supplemental material
+visualized in Fig.~\ref{fig:tuning}. More qualitative results can be found in the
+supplemental material.
 \paragraph{Results.}
 %
-In Tab.~\ref{tab:pascal12}, we make mainly two observation. First, we
+In Tab.~\ref{tab:pascal12}, we make two main observations. First, we
 see that adding our method to DPM-VOC+VP consistently improves
 performance in terms of AVP, for both car and bicycle, and across all
 viewpoint bins. This is already the case for our discrete method: the
@@ -313,7 +311,7 @@ $1.1$ for bicycle-16v when using the R-CNN as the base detector.
 %
 In Fig.~\ref{fig:tuning}, we visualize the effect of fine-tuning
 qualitatively for two different test images. In both cases, the
-fine-tuned visually comes closer to the true 3D pose.
+fine-tuned pose is a better visual match to the true 3D pose.
 % We got significant improvement on viewpoint estimation by using our
 % method on top of general purpose detectors. Note that our method
 % estimates azimuth, elevation, in-plane rotation, focal length
@@ -330,10 +328,10 @@ fine-tuned visually comes closer to the true 3D pose.
   \includegraphics[width=0.24\textwidth]{car_cnn/1c.png} &   
   \includegraphics[width=0.24\textwidth]{car_cnn/1d.png}  \\  
 %   \hline
-  \includegraphics[width=0.24\textwidth]{car_cnn/2a.png} &   
-  \includegraphics[width=0.24\textwidth]{car_cnn/2b.png} &   
-  \includegraphics[width=0.24\textwidth]{car_cnn/2c.png} &   
-  \includegraphics[width=0.24\textwidth]{car_cnn/2e.png}  \\  
+%  \includegraphics[width=0.24\textwidth]{car_cnn/2a.png} &   
+%  \includegraphics[width=0.24\textwidth]{car_cnn/2b.png} &   
+%  \includegraphics[width=0.24\textwidth]{car_cnn/2c.png} &   
+%  \includegraphics[width=0.24\textwidth]{car_cnn/2e.png}  \\  
 %   \hline
   \includegraphics[width=0.24\textwidth]{car_cnn/4a.png} &   
   \includegraphics[width=0.24\textwidth]{car_cnn/4b.png} &   
@@ -364,34 +362,42 @@ fine-tuned visually comes closer to the true 3D pose.
   CNN Proposals & \multicolumn{3}{|c|}{Our matching results on proposal bounding boxes} \\
   \hline
 \end{tabular}
-\caption{Example enriched bounding boxes. Given R-CNN\cite{Girshick14}
+\caption{Example enriched bounding boxes. Given R-CNN~\cite{Girshick14}
   detection bounding boxes, our method predicted 2D-3D matching
-  reasonably. On the first column, R-CNN detection bounding boxes
-  overlaid. From the second to the last columns, output of our method
-  given a R-CNN box. Blue boxes are R-CNN output and purple boxes are
+  reasonably. The first column shows bounding boxed produced by R-CNN detection. Subsequent columns show the output of our method given this bounding box input. Blue boxes are R-CNN output and purple boxes are
   the tightest bounding box enclosing predicted CAD model.}
   \label{fig:pascal12cnn}
 \end{figure*}
 %
 \begin{table*}[t]
-    \footnotesize
+    \scriptsize
   \begin{center}
-\begin{tabular}{|c||c||c||c|c||c|c|}
-\hline
-AP/AVP              & V-DPM \cite{Xiang14} & DPM-VOC+VP \cite{Pepik12}  & \cite{Pepik12} + Ours (discrete) & \cite{Pepik12} + Ours (full) & R-CNN + Ours (discrete) & R-CNN + Ours (full)\\
-\hline\hline
-car-4v              & 37.2 / 20.2         & 45.6 / 36.9             & 47.6 / 42.7       & 47.6 / \textbf{42.7}        & 49.6 / 41.5         & 49.6 / 41.5\\ \hline
-car-8v              & 37.3 / 23.5         & 47.6 / 36.6             & 47.6 / \textbf{39.8}       & 47.6 / 39.5        & 49.6 / 38.0         & 49.6 / 39.0\\ \hline
-car-16v             & 36.6 / 18.1         & 46.0 / 29.6             & 47.6 / 32.7       & 47.6 / 33.0        & 49.6 / 34.0         & 49.6 / \textbf{34.3}\\ \hline
-car-24v             & 36.3 / 13.7         & 42.1 / 24.6             & 47.6 / 27.4       & 47.6 / 27.4        & 49.6 / 27.0         & 49.6 / \textbf{27.6}\\ \hline
-\hline
-bicycle-4v          & 45.2 / 41.7         & 46.9 / 43.9             & 48.1 / 47.6       & 48.1 / 46.6        & 61.7 / 56.5         & 61.7 / \textbf{56.7}\\ \hline
-bicycle-8v          & 47.3 / 36.7         & 48.1 / 40.3             & 48.1 / 40.6       & 48.1 / 40.6        & 61.7 / 48.9         & 61.7 / \textbf{49.2}\\ \hline
-bicycle-16v         & 46.5 / 18.4         & 45.6 / 22.9             & 48.1 / 26.2       & 48.1 / 27.3        & 61.7 / 34.7         & 61.7 / \textbf{35.8}\\ \hline
-bicycle-24v         & 44.4 / 14.3         & 45.9 / 16.7             & 48.1 / 21.5       & 48.1 / 20.9        & 61.7 / \textbf{27.0}         & 61.7 / 23.9\\ \hline
-\end{tabular}
-\end{center}
-\caption{Average Precision(AP) and Average Viewpoint Precision (AVP) on
+    \begin{tabular}{|c||c||c||c|c||c|c|}
+    \hline
+    AP/AVP              & V-DPM \cite{Xiang14} & DPM-VOC+VP \cite{Pepik12}  & \cite{Pepik12} + Ours (discrete) & \cite{Pepik12} + Ours (full) & R-CNN + Ours (discrete) & R-CNN + Ours (full)\\
+    \hline\hline
+    aeroplane-4v        & 40.0 / 34.6         & 41.5 / 37.4             & 41.1 / 32.7       & 41.1 / 30.5        & 67.8 / \textbf{41.3}         & 67.8 / 40.8 \\ \hline
+    aeroplane-8v        & 39.8 / 23.4         & 40.5 / 28.6             & 41.1 / 26.8       & 41.1 / 24.2        & 67.8 / 26.8         & 67.8 / \textbf{27.4} \\ \hline
+    aeroplane-16v       & 43.6 / 15.4         & 38.0 / 15.9             & 41.1 / 17.7       & 41.1 / 16.3        & 67.8 / 21.2         & 67.8 / \textbf{21.5} \\ \hline
+    aeroplane-24v       & 42.2 / 8.0          & 36.0 /  9.7             & 41.1 / 10.9       & 41.1 / 10.2        & 67.8 / 15.6         & 67.8 / \textbf{15.7} \\ \hline
+    \hline
+    car-4v              & 37.2 / 20.2         & 45.6 / 36.9             & 47.6 / 42.7       & 47.6 / \textbf{42.7}        & 49.6 / 41.5         & 49.6 / 41.5\\ \hline
+    car-8v              & 37.3 / 23.5         & 47.6 / 36.6             & 47.6 / \textbf{39.8}       & 47.6 / 39.5        & 49.6 / 38.0         & 49.6 / 39.0\\ \hline
+    car-16v             & 36.6 / 18.1         & 46.0 / 29.6             & 47.6 / 32.7       & 47.6 / 33.0        & 49.6 / 34.0         & 49.6 / \textbf{34.3}\\ \hline
+    car-24v             & 36.3 / 13.7         & 42.1 / 24.6             & 47.6 / 27.4       & 47.6 / 27.4        & 49.6 / 27.0         & 49.6 / \textbf{27.6}\\ \hline
+    \hline
+    chair-4v            & 11.1 / 6.8          & 8.7  / 6.1              &  11.4 / 7.1       & 11.4 / 6.7         & 25.2 / 10.6         & 25.2 / \textbf{10.7} \\ \hline
+    chair-8v            & 11.4 / 5.9          & 11.3 / 9.4              &  11.4 / 6.6       & 11.4 / 6.6         & 25.2 / \textbf{9.4}          & 25.2 / 9.3 \\ \hline
+    chair-16v           & 12.8 / 6.0          & 10.2 / 6.1              &  11.4 / 4.7       & 11.4 / 4.7         & 25.2 / \textbf{6.7}          & 25.2 / 6.7 \\ \hline
+    chair-24v           & 12.6 / 4.4          & 8.0  / 4.2              &  11.4 / 3.1       & 11.4 / 3.4         & 25.2 / 4.6          & 25.2 / \textbf{5.4} \\ \hline
+    \hline
+    bicycle-4v          & 45.2 / 41.7         & 46.9 / 43.9             & 48.1 / 47.6       & 48.1 / 46.6        & 61.7 / 56.5         & 61.7 / \textbf{56.7}\\ \hline
+    bicycle-8v          & 47.3 / 36.7         & 48.1 / 40.3             & 48.1 / 40.6       & 48.1 / 40.6        & 61.7 / 48.9         & 61.7 / \textbf{49.2}\\ \hline
+    bicycle-16v         & 46.5 / 18.4         & 45.6 / 22.9             & 48.1 / 26.2       & 48.1 / 27.3        & 61.7 / 34.7         & 61.7 / \textbf{35.8}\\ \hline
+    bicycle-24v         & 44.4 / 14.3         & 45.9 / 16.7             & 48.1 / 21.5       & 48.1 / 20.9        & 61.7 / \textbf{27.0}         & 61.7 / 23.9\\ \hline
+    \end{tabular}
+  \end{center}
+\caption{Average Precision (AP) and Average Viewpoint Precision (AVP) on
   PASCAL3D+~\cite{Xiang14}. For combined methods (* + Ours), we use
   bounding boxes from * and augment viewpoint using our method.}
   % R-CNN
@@ -404,6 +410,14 @@ bicycle-24v         & 44.4 / 14.3         & 45.9 / 16.7             & 48.1 / 21.
   % state-of-the-art R-CNN performance}
 \label{tab:pascal12}
 \end{table*}
+
+\begin{comment}
+\hline
+boat-4v             & 3.0 / 1.5           & 0.5 / 0.3               &  /        &  /         & 27.9 / 11.3         & 27.9 / 11.5 \\ \hline
+boat-8v             & 5.8 / 1.0           & 0.5 / 0.2               &  /        &  /         & 27.9 / 5.4          & 27.9 / 5.4 \\ \hline
+boat-16v            & 6.2 / 0.5           & 0.7 / 0.3               &  /        &  /         & 27.9 / 2.0          & 27.9 / 2.0 \\ \hline
+boat-24v            & 6.0 / 0.3           & 5.3 / 2.2               &  /        &  /         & 27.9 / 1.8          & 27.9 / 2.5 \\ \hline
+\end{comment}
 
 \begin{figure}[h]
 \setlength\tabcolsep{1pt}
