--- a/intro.tex
+++ b/intro.tex
@@ -21,15 +21,14 @@ level of performance in 2D bounding box
 localization~\cite{pascal12, Felzenszwalb10, Overfeat, Krizhevsky12, Girshick14}, due to their
 ability to generalize across differences in object appearance,
 lighting, and viewpoint. While this generalization
-ability of these methods is beneficial for robustness, it also limits
+ability is beneficial for robustness, it limits
 the level of detail that these detectors can deliver as an output.
 
 As a consequence, there has been increased interest in multi-view object
 recognition, where viewpoint estimates are provided by
 detectors in addition to 2D bounding boxes. Several attempts have been
-made to estimate viewpoint along with object class detections,
-implemented as extensions to existing detectors, such as the implicit
-shape models~\cite{sun10eccv}, the constellation model~\cite{stark10bmvc}, or the
+made to extend existing detectors to estimate viewpoint along with object class detections, including the implicit
+shape model~\cite{sun10eccv}, the constellation model~\cite{stark10bmvc}, and the
 deformable part model~\cite{Felzenszwalb10, gu10eccv,Xiang12,Pepik12,Fidler12,Hejrati14}.
 
 Recently, an even higher level of geometric detail was reached in the
@@ -40,7 +39,7 @@ images has been explored since the early days of computer
 vision~\cite{Lowe87}, but had largely been neglected in recent years
 in favor of 2D detectors based on robust local features and
 statistical learning techniques. Now, this problem is being revisited
-mostly due to two reasons: {\em (i)} the availability of 3D CAD models
+for two main reasons: {\em (i)} the availability of 3D CAD models
 for many object classes and {\em (ii)} the availability of robust
 image matching techniques.
 %
@@ -78,8 +77,7 @@ image matching techniques.
 % by rendering CAD models and creating 2D templates for various
 % viewpoints.
 
-For (i), recent approaches to 2D-3D matching~\cite{Aubry14, Lim14}
-typically rely on a
+For (i), recent approaches to 2D-3D matching~\cite{Aubry14, Lim14} rely on a
 collection of 3D exemplar models, which they render from a
 large number of viewpoints. The resulting artificial images are then
 used to train exemplar models that can be matched to a real-world
@@ -88,8 +86,8 @@ image at test time.
 For (ii), it has been realized that template-based exemplar detectors
 based on HOG~\cite{Dalal05} features can be trained analytically, by
 replacing the standard SVM with an LDA classifier
-(E-LDA)~\cite{Hariharan12}, resulting in a whitened feature
-representation, termed WHO. As a result, it is feasible to train
+(E-LDA)~\cite{Hariharan12}. The result is a whitened feature
+representation, termed WHO (Whitened Histogram of Orientations). This development makes it feasible to train
 hundreds of thousands of mid-level patch detectors for
 recognition~\cite{Aubry14}.
 %
@@ -104,12 +102,10 @@ In this paper, we propose a novel method for 2D-3D alignment of
 exemplar CAD models to real-world images that circumvents the need for
 calibration, and greatly enhances the scalability of WHO. As a
 result, we can render novel views and train corresponding exemplar
-models {\em on the fly}, without the need for offline processing and we call
-these NZ-WHO templates \ref{fig:front}. As a
+models {\em on the fly}, without the need for offline processing. We call these NZ-WHO templates \ref{fig:front}. As a
 by-product, we can formulate the alignment problem as a parameter
-search in a continuous pose space, consisting of yaw, pitch and roll, resulting
-in truly continuous pose estimates, which
-we implement using MCMC sampling.
+search in a continuous pose space, consisting of yaw, pitch and roll, which
+we implement using MCMC sampling. 
 
 %  require a large number of rendering and 2D
 % templates for each of the CAD model with specific viewpoint. Since
@@ -127,7 +123,7 @@ we implement using MCMC sampling.
 % templates have been made and calibrated, it is difficult to fine-tune
 % the prediction made using the large collection of templates.
 
-Our paper makes the following specific contributions.
+Our paper makes the following contributions:
 
 First, we present a novel method for training exemplar models from
 rendered 3D CAD data {\em on the fly}, enabled by a novel variant of
@@ -146,14 +142,13 @@ exemplar detectors on the fly.
 % initial pose estimation to continuously refine translation, viewpoints
 % (yaw, roll, pitch) and focal length.
 %
-Second, we show to enrich the output of an existing object class
+Second, we demonstrate that our method can enrich the output of an existing object class
 detector, such as the DPM~\cite{Felzenszwalb10} or the
-R-CNN~\cite{Girshick14} with additional 3D information, applying our
-method to candidate detections provided by the respective detector. As
-a result, we can refine the original detections with additional
-estimates of 3D continuous pose and a 3D CAD model exemplar.
+R-CNN~\cite{Girshick14} with additional 3D information. By applying our
+method to candidate detections provided by the respective detector, we can augment the original detections with an
+estimate of 3D continuous pose and a 3D CAD model exemplar.
 %
-And third, we give an in-depth experimental study that demonstrates
+Finally, we give an in-depth experimental study that demonstrates
 the effectiveness of our approach on a standard benchmark for
 object detection and viewpoint estimation~\cite{Xiang14}. 
 
