--- a/related.tex
+++ b/related.tex
@@ -24,7 +24,7 @@ More recently, \cite{Aubry14, Lim14} made progress in joint instance-level
 object detection and pose estimation. To estimate pose they use synthetic
 renderings of CAD models to learn discriminative mid-level patches.
 \cite{Aubry14} calibrates these patches on a small set of real images, while
-\cite{Lim14} present a method for learning the relative discriminativeness of
+\cite{Lim14} presents a method for learning the relative discriminativeness of
 the patches.
 
 % \textcolor{red}{Again, should we highlight the differences between these methods and ours?}
