--- a/2349_ext.tex
+++ b/2349_ext.tex
@@ -5,26 +5,23 @@
             urlcolor  = blue,
             citecolor = blue,
             anchorcolor = blue]{hyperref}
+\graphicspath{ {figures/} }
 
 % Document starts here
 \begin{document}
 
 
-\title{A Plumbline Constraint for the Rational Function Lens Distortion Model}
+\title{Enriching Object Detection with 2D-3D Registration and Continuous Viewpoint Estimation}
 \addauthor{
-David Claus$^1$, 
-Andrew Fitzgibbon$^2$
-}{}{1}
+Christopher Bongsoo Choy\textsuperscript{\dag}, Michael Stark\textsuperscript{\dag \ddag}, Sam Corbett-Davies\textsuperscript{\dag}, Silvio Savarese\textsuperscript{\dag}}{}{1}
 \addinstitution{
-$^1$Department of Engineering Science, Oxford University. 
-$^2$Microsoft Research Cambridge.
+\textsuperscript{\dag}Stanford University, \textsuperscript{\ddag}Max Planck Institute for Informatics
 }
- 
- 
+
+
 \maketitle
 \let\thefootnote\relax\footnote{This is an extended abstract. The full paper is available at the \href{http://www.cv-foundation.org/openaccess/CVPR2015.py}{Computer Vision Foundation webpage}. }
 \vspace{-0.2in}
-
 
 
 % Extended abstract begins here.  In a one-page document, there is
@@ -32,149 +29,151 @@ $^2$Microsoft Research Cambridge.
 % wish.
 
 \noindent
-Calibration of lens distortion has traditionally proceeded in one
-of three ways.  The first is to use known correspondences between
-feature points in one or more images, and the world 3D points.
-This is typically done using a checkerboard or a calibration grid
-of dots where corners or dot centres can be reliably
-located~\cite{Tsai86}. A second class of calibration techniques is
-termed auto-calibration as it relies solely on detecting static
-points within a scene~\cite{Zhang96,Fitzgibbon01}.  This paper fits
-into the third category, where straight lines in the world are used
-to determine the distortion parameters.  This {\em plumbline}
-technique was first mooted by~\cite{Brown71}, and has been applied
-to various distortion models~\cite{Devernay01,Swaminathan00}.
+% In this paper, we propose a novel method for 2D-3D alignment of exemplar CAD
+% models to real-world images that circumvents the need for calibration and
+% greatly enhances the scalability of WHO. Our model generates a discriminative
+% exemplar template on-the-fly and align model accurately using MCMC.
 
-We show in this paper how a plumbline constraint can be implemented
-using the rational function model for lens
-distortion~\cite{Claus05}, under which straight lines are imaged as
-conics, and this permits an elegant factorization of the conics
-into the camera calibration and the equations of the straight
-lines.  This differs from previous plumbline work in two ways:
-first, a factorization-based algorithm can be formulated to
-estimate the distortion; second, nonlinear refinement of the
-distortion can be easily implemented to minimize a good
-approximation of geometric distance in the image plane.  The simplicity of the mapping leads to fast and efficient convergence of the
-nonlinear algorithm over a range of starting positions.
+A large body of recent work on object detection has focused on providing more
+than a bounding box of an object. Some exploited 3D CAD
+model databases to provide viewpoint estimation. These approaches work
+by aligning exact 3D models to images using templates generated from renderings
+of the 3D models at a set of discrete viewpoints.
 
-\newcommand{\tr}{^{\top}}
-\newcommand{\matx}[1]{\mbox{\tt #1}}
-\newcommand{\vect}[1]{{\bf #1}}
-For a perspective camera, the mapping from image pixels $(i,j)$ to 3D rays
-$\vect d(i,j)$ can be expressed as:
-\begin{equation}
-\vect d(i,j) = \begin{pmatrix}
-B_{11} i   + B_{12}  j + B_{13} 1\\
-B_{21} i   + B_{22}  j + B_{23} 1\\
-B_{31} i   + B_{32}  j + B_{33} 1
-\end{pmatrix}
-= \matx B \begin{pmatrix}i\\j\\1\end{pmatrix}, \label{eqn:pinhole}
-\end{equation}
-where the $3\times3$ matrix $\matx B = \matx R^\top \matx K^{-1}$, and
-$\matx R$ is often chosen to be the identity~\cite{Hartley00}.  The
-rational function model handles lens distortion by permitting
-$i$ and $j$ to appear in higher order polynomials, in particular
-quadratic:
-\begin{equation}
-\vect d(i,j) = \begin{pmatrix}
-A_{11} i^2 + A_{12} ij + A_{13} j^2 + A_{14} i + A_{15} j + A_{16}\\
-A_{21} i^2 + A_{22} ij + A_{23} j^2 + A_{24} i + A_{25} j + A_{26}\\
-A_{31} i^2 + A_{32} ij + A_{33} j^2 + A_{34} i + A_{35} j + A_{36}
-           \end{pmatrix}.
-           \label{eqn:model}
-\end{equation}
+However, training the template for all viewpoint and CAD models is not feasible
+since gathering all training data for different viewpoint and CAD models is
+expensive.  Instead, it has been realized that template-based exemplar
+detectors based on HOG features can be trained analytically, by
+replacing the standard SVM with an LDA classifier $w_{x_t}$ for a template $x_t$
+~\cite{Hariharan12}.
 
-\newcommand{\A}{\mbox{${\tt A}$}}
-\newcommand{\Chi}{\raisebox{.4ex}{$\boldsymbol\chi$}}
-This model may be written as a linear combination of the distortion
-parameters, in a $3\times6$ matrix \A\ (analogous to $\matx B$
-above), and a 6-vector $\Chi$ of monomials in $i$ and $j$.  Define
-$\Chi$ as the ``lifting'' of image point $(i,j)$ to a six
-dimensional space
-\begin{equation}
-\Chi(i,j) =
-[i^2,\;\;ij,\;\;j^2,\;\;i,\;\;j,\;\;1]^{\top}\label{eqn:Chi}
-\end{equation}
-The imaging model~(\ref{eqn:model}) may then be written
-\begin{equation}
-\vect d(i,j) = \A \Chi(i,j) \label{eqn:project}
-\end{equation}
+The result is a whitened feature representation, termed WHO (Whitened Histogram
+of Orientations). This development makes it feasible to train hundreds of
+thousands of mid-level patch detectors for recognition.
 
-\def\conic{{\boldsymbol\theta}}
-A line in the scene forms a plane with the origin of camera
-coordinates, and is imaged to the set of $\vect d$ in that plane.
-This yields the line equation $\vect l\tr \vect d = 0$ which, in
-terms of image points $(i,j)$ becomes
-\begin{equation}
-\vect l\tr \A \Chi = 0 \Longleftrightarrow \conic^{\top} \Chi = 0,
-\end{equation}
-where $\conic = (A_{xx}, A_{xy}, A_{yy}, A_x, A_y,
-A_{_\mathit{0}})\tr$ are the parameters of a conic in image coordinates $(i,j)$
-and $\Chi$ is given by (\ref{eqn:Chi}).  Here we observe the
-important property that lines in the world go to conics under the
-rational function model.  The task of calibration is then to find an
-\A\ which will map these conics in the distorted image back to
-straight lines.
+Though it achieved remarkable improvements, generating LDA templates (matrix
+decomposition with Gaussian Elimination) and calibrating them are
+computationally expensive and require gigabytes of memory and storage, while
+the viewpoint discretization hampers pose estimation performance.
 
-By fitting a conic to the image of the line, we obtain
-parameters~$\conic$, and thus the constraint
-$\conic = \A\tr \vect l$
-for unknown $\A$ and $\vect l$.  The equality is exact as any scale
-factor is included in $\vect l$. Collecting $L$ such constraints, we
-obtain
-\begin{align}
-\underbrace{\left[ \conic_1 \mid \ldots \mid \conic_L
-\right]}_{6\times L} & =
-\underbrace{\phantom{\left[\right]}\A\tr}_{6\times 3}
-\underbrace{\left[ \vect l_1 \mid \ldots \mid \vect l_L \right]}_{3\times L}
-\nonumber
-\end{align}
-which we write as
-$\matx C = \A\tr \matx L\label{eqn:proj_line}$
-so the matrix of conic parameters $\matx C$ is of rank no greater
-than~$3$.  Therefore $\A$ can be computed up to a homography by
-factorization: if $\matx U \matx S \matx V\tr = \matx C$ is the SVD
-of $\matx C$, then $\A = \matx S_{(1:3,1:3)} {\matx U_{(:,1:3)}}\tr$
-is one member of the equivalence class of solutions.
+% In this paper, instead of caching and calibrating all templates on training
+% time, we selectively generate templates on testing time as well to estimate
+% viewpoint continuously using the technique we proposed termed Non-Zero Whitened
+% Histograms of Orientations (NZ-WHO).
+
+% The method uses Conjugate Gradient method to efficiently generate an LDA template on-the-fly (60 ms) without expensive calibration steps.
 
 \begin{figure}[t]
-\includegraphics[width=\linewidth]{images/fig1.png}
-\caption{
-Edges corresponding to straight lines in the real world are
-detected (a) and the plumbline constraint is used to compute the
-distortion parameters, giving the rectified image (b)}
-\vspace{-2mm}
+  \centering
+  % \includegraphics[width=0.9\linewidth]{schematics} 
+  \includegraphics[width=0.8\linewidth]{front} % \\[-5pt]
+  \caption{Using a database of 3D CAD models, we generate NZ-WHO
+    templates which can be used to either detect objects directly or
+    enrich the output of an existing detector with high-quality,
+    continuous pose and 3D CAD model exemplar.}
+    % initialize pose of an object in the bounding box from other
+    % detectors. Once initialization is given, we use NZ-WHO to propose
+    % and validate plausible pose on-the-fly and
+    % further tune the translation, 3D viewpoint and focal length continuously.}
+  % \vspace{-1em}
+  \label{fig:front}
 \end{figure}
 
-The matrix $\matx C$ will not be rank 3 if the conics were obtained by
-fitting to noisy image data.  The above factorization truncates $\matx C$
-to rank 3 by minimizing the error in the conic parameter space, and as
-discussed in the paper, this is sensitive to noise.  The strategy for
-fitting \A\ from noisy image data is to run a non-linear optimization that
-finds the \A\ which minimizes the error between the image data and straight
-lines projected (as conics) into the distorted image.  The nonlinear
-objective measures the Sampson distance~\cite{Hartley00} from the conics to
-the detected edgels.  Let $\vect e_{\ell k} = (i_{\ell k},j_{\ell k})$
-denote the $k^{th}$ edgel in linked segment $\ell$. The Sampson distance is
-a first order approximation to the distance from a point to a conic. The
-error function $\varepsilon(\matx A, \vect l_1, \ldots, \vect l_L)$ we
-minimize is then given by (with $\conic^\ell := \matx A \vect l_\ell$)
-\begin{equation}
-\def\t#1{\conic^\ell_{#1}}
-\varepsilon =
-\sum_{\ell = 1}^{L} \sum_{k=1}^{n_\ell }
-\frac
-{\left[(\conic^\ell)\tr\Chi\left(i_{\ell k},j_{\ell k}\right)\right]^2}
-{(2\t1 i_{\ell k} + \t2 j_{\ell k} + \t4)^2 + (2\t3 j_{\ell k} +
-\t2 i_{\ell k} + \t5)^2}
-\nonumber
-\end{equation}
-Implementation of this method by edge detection and edge linking is
-described in the paper, as are the details of the nonlinear optimization.
-Our conclusion is that the simplicity of the rational function model,
-coupled with its ability to model a variety of lenses, makes it a useful
-model to consider when dealing with lenses exhibiting moderate to severe
-distortion.
+
+\paragraph{Overview}
+
+In this paper, we propose a novel method for 2D-3D alignment of exemplar CAD
+models to real-world images that circumvents the need for calibration and
+greatly enhances the scalability of WHO. As a result, we can render novel views
+and train corresponding exemplar models {\em on-the-fly}, without the need for
+offline processing. We call these Non-Zero Whitened Histograms of Orientations
+(NZ-WHO) templates Fig.~\ref{fig:front}. As a by-product, we can formulate the
+alignment problem as a parameter search in a continuous pose space, consisting
+of yaw, pitch and roll, which we implement using MCMC sampling.
+
+First, we present a novel method for training exemplar models from
+rendered 3D CAD data on-the-fly, enabled by a novel variant of
+WHO, termed Non-Zero Whitened Histograms of Orientations (NZ-WHO), and making
+efficient use of the specific characteristics of rendered images. To our
+knowledge, our method constitutes the first attempt to simultaneously render
+and train exemplar detectors on-the-fly.
+
+Second, we demonstrate that our method can enrich the output of an existing
+object class detector, such as the DPM or the
+R-CNN with additional 3D information. By applying our
+method to candidate detections provided by the respective detector, we can
+augment the original detections with an estimate of 3D continuous pose and a 3D
+CAD model exemplar.
+
+Finally, we give an in-depth experimental study that demonstrates
+the effectiveness of our approach on a standard benchmark for
+object detection and viewpoint estimation~\cite{Xiang14}.
+
+
+\begin{figure}[t]
+\small
+\setlength\tabcolsep{1pt}
+\centering
+\begin{tabular}{ccccc}
+  \includegraphics[width=0.2\textwidth]{car_cnn/2c.png} &
+  \includegraphics[width=0.2\textwidth]{car_cnn/2e.png} \\
+  \includegraphics[width=0.2\textwidth]{bicycle_cnn/4b.png} &
+  \includegraphics[width=0.2\textwidth]{bicycle_cnn/4c.png} \\
+\end{tabular}
+\caption{Example enriched bounding boxes. Given R-CNN
+	detection bounding boxes, our method predicts the best 2D-3D
+	registration given the bounding box input. Blue boxes are R-CNN output and
+	purple boxes are the tightest bounding box enclosing predicted CAD model.}
+\label{fig:pascal12cnn}
+\end{figure}
+
+
+\paragraph{Non-Zero Whitened Histograms of Orientations}
+
+NZ-WHO removes these artifacts so that the background has no effect on the
+template response. Let a vectorized HOG feature of a rendering image $x = [
+x_1^T ,  \cdots , x_n^T ]^T \in \mathcal{R}^{nd}$ where $x_i$ is the $i$th HOG cell feature, $n$ is the
+number of HOG cells and $d$ is the dimension of the HOG feature. We create a new
+vector $\bar{x}$ which contains only the non-zero HOG cell features of $x$.
+Synthesizing the LDA template requires solving the system of linear equations
+$\bar{w}=\bar{\Sigma}^{-1}(\bar{x} - \bar{\mu})$. In \cite{Hariharan12}, the
+authors solve the system via the Cholesky decomposition, which requires
+$O(n^3)$ time. Instead, we introduced the Conjugate Gradient method to generate
+LDA templates. The method runs in $O(n^2\kappa)$ time, where $\kappa$ is the condition number of the matrix and achieved more than 100x speed-up.
+
+% Also, the residual from the Conjugate Gradient method (the norm of $y-Ax$ for
+% $Ax = y$) is smaller than 
+% that of Cholesky decomposition. 
+
+\paragraph{Fine-Tuning using MCMC}
+Due to the speed of our template synthesis procedure, we are able to perform
+joint optimization of scale, translation, continuous rotation, and focal length
+using the Metropolis-Hastings algorithm.
+
+We model the probability of an object with the parameter $\theta$ in the test
+image $\mathcal{I}$ as $P(\theta| \mathcal{I}) \sim e^{ \max_{s} w(\theta)
+	\ast \mathcal{T}_s(\mathcal{I})}$. We approximate the MAP solution for $p$ by
+drawing samples from the distribution $P(\theta | \mathcal{I})$, using the
+Metropolis-Hastings algorithm.
+
+\paragraph{Experiments}
+
+First, we verify that our NZ-WHO method delivers performance that is
+at least on par with the original WHO formulation~\cite{Hariharan12} in terms of
+accuracy, while at the same time resulting in large computational
+savings.
+
+Second, we demonstrate that our method can be used for multi-view
+object class detection in isolation. It can be applied in a sliding
+window fashion and deliver 2D bounding box as well as viewpoint
+information. Our method is competitive with the state-of-the-art in this
+case.
+
+Finally, we show that our method can be used to complement the
+detections provided by an existing object class detector, such
+as DPM or RCNN. In this case, we show a considerable performance improvement
+compared to previous work in the task of joint object class detection and VP
+estimation. Example outputs of our model are on Fig.~\ref{fig:pascal12cnn}.
 
 \bibliography{egbib}
 
